--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -15,6 +15,7 @@
 
 <div class="govuk-grid-row govuk-!-padding-top-4 ccs-at-results-pg">
   
+  <!-- ID #ccs-at-results-filters required -->
   <section id="ccs-at-results-filters" class="govuk-grid-column-one-third ccs-at-results-filters"> 
     <%= form_tag apprenticeships_search_path, method: :get, id: 'search-results-form' do %><!-- form inside section element-->
 
