--- a/app/views/ccs_patterns/home/supplier_results_v1.html.erb
+++ b/app/views/ccs_patterns/home/supplier_results_v1.html.erb
@@ -3,13 +3,13 @@
             <h1 class="govuk-heading-m">Supplier results table v1</h1>
             <p class="govuk-body">New HTML for a supplier results table (v1) pattern. <br>(Unordered list, with no column headers).</p>
 
-            <p><b>Note</b> classes: .ccs-search-results, .ccs-tag, .ccs-next</p>
+            <p><b>Note</b> classes: .ccs-search-results, ccs-results-list, .ccs-at-results-list__detail,  .ccs-no-underline, .ccs-tag, .ccs-font--wrap, .ccs-next</p>
             <p><small>Change the class '.govuk-grid-column-two-thirds' accordingly.</small></p>
         </div>
     </div>
 
     <hr style="margin-bottom: 150px;">
-    <style>#ccs-search-results {margin-bottom: 100px; }</style>
+    <style>.ccs-search-results {margin-bottom: 100px; }</style>
 
 
 
