--- a/app/views/ccs_patterns/home/supplier_results_v1.html.erb
+++ b/app/views/ccs_patterns/home/supplier_results_v1.html.erb
@@ -3,7 +3,7 @@
             <h1 class="govuk-heading-m">Supplier results table v1</h1>
             <p class="govuk-body">New HTML for a supplier results table (v1) pattern. <br>(Unordered list, with no column headers).</p>
 
-            <p><b>Note</b> classes: .ccs-search-results, ccs-results-list, .ccs-at-results-list__detail,  .ccs-no-underline, .ccs-tag, .ccs-font--wrap, .ccs-next</p>
+            <p><b>Note</b> classes: .ccs-search-results, ccs-results-list, .ccs-results-list__detail,  .ccs-no-underline, .ccs-tag, .ccs-font--wrap, .ccs-next</p>
             <p><small>Change the class '.govuk-grid-column-two-thirds' accordingly.</small></p>
         </div>
     </div>
@@ -19,7 +19,7 @@
     <!-- the supplier results HTML starts ... -->
     <section class="govuk-grid-column-two-thirds ccs-search-results">
 
-        <ul class="ccs-at-results-list">
+        <ul class="ccs-results-list">
             <li class="govuk-list">
                 <div class="govuk-grid-column-two-thirds">
                     <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
@@ -28,7 +28,7 @@
                     </a>
                 </div>
 
-                <div class="govuk-grid-column-one-third ccs-at-results-list__detail">
+                <div class="govuk-grid-column-one-third ccs-results-list__detail">
                     <div>
                     <span class="govuk-!-font-size-16">
                         <span class="govuk-!-font-size-27 ccs-font--wrap">&pound;400</span> 
@@ -46,7 +46,7 @@
                     </a>
                 </div>
 
-                <div class="govuk-grid-column-one-third ccs-at-results-list__detail">
+                <div class="govuk-grid-column-one-third ccs-results-list__detail">
                     <div>
                     <span class="govuk-!-font-size-16">
                         <span class="govuk-!-font-size-27 ccs-font--wrap">&pound;325</span> 
@@ -61,7 +61,7 @@
                     <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">Vestibulum pellentesque turpis at</a>
                 </div>
 
-                <div class="govuk-grid-column-one-third ccs-at-results-list__detail">
+                <div class="govuk-grid-column-one-third ccs-results-list__detail">
                     <div>
                     <span class="govuk-!-font-size-16">
                         <span class="govuk-!-font-size-27 ccs-font--wrap">&pound;395</span> 
@@ -76,7 +76,7 @@
                     <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">Phasellus facilisis quis dui a pellentesque</a>
                 </div>
 
-                <div class="govuk-grid-column-one-third ccs-at-results-list__detail">
+                <div class="govuk-grid-column-one-third ccs-results-list__detail">
                     <div>
                     <span class="govuk-!-font-size-16">
                         <span class="govuk-!-font-size-27 ccs-font--wrap">&pound;475</span> 
@@ -91,7 +91,7 @@
                     <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">Sed a fringilla risus</a>
                 </div>
 
-                <div class="govuk-grid-column-one-third ccs-at-results-list__detail">
+                <div class="govuk-grid-column-one-third ccs-results-list__detail">
                     <div>
                     <span class="govuk-!-font-size-16">
                         <span class="govuk-!-font-size-27 ccs-font--wrap">&pound;295</span> 
@@ -106,12 +106,12 @@
                 <div class="govuk-grid-column-two-thirds">
                     <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">Example with sub-list row</a>
 
-                    <ul class="ccs-at-results-list__details">
+                    <ul class="ccs-results-list__details">
                         <li class="govuk-grid-column-one-third"><b>Level:</b> 3</li>
                     </ul>
                 </div>
 
-                <div class="govuk-grid-column-one-third ccs-at-results-list__detail">
+                <div class="govuk-grid-column-one-third ccs-results-list__detail">
                     <div>
                     <span class="govuk-!-font-size-16">
                         <span class="govuk-!-font-size-27 ccs-font--wrap">1</span> 
