--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -129,7 +129,7 @@
 
     <h2 class="govuk-heading-m ccs-remove">Results</h2>
 
-    <ul class="ccs-at-results-list">
+    <ul class="ccs-results-list">
       <% results.each do |result| %>
         <%= render 'search_apprenticeship', result: result %>
       <% end %>
