--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -434,7 +434,7 @@ body.js-enabled #ccs-dynamic-accordian {
 
 
 /* small checkboxes starts */
-.css-govuk-checkboxes--s { 
+.ccs-govuk-checkboxes--s { 
 
     .govuk-checkboxes__input + .govuk-checkboxes__label::before, 
     .govuk-checkboxes__input {//the tick box border
