--- a/app/views/apprenticeships/home/_provider_filters.html.erb
+++ b/app/views/apprenticeships/home/_provider_filters.html.erb
@@ -21,7 +21,7 @@
           </span>
 
           <div id="c1" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <% ofsted_rating.each do |rating| %>
                 <div class="govuk-checkboxes__item">
@@ -61,7 +61,7 @@
           </span>          
 
           <div id="c2" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <!-- temp example of disabled attribute start -->
               <div class="govuk-checkboxes__item">
@@ -110,7 +110,7 @@
           </span>          
 
           <div id="c3" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <!-- temp example of 2 selected start -->
               <div class="govuk-checkboxes__item">
@@ -165,7 +165,7 @@
           </span>          
 
           <div id="c4" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <% delivery_method.each do |course| %>
                 <div class="govuk-checkboxes__item">
@@ -205,7 +205,7 @@
           </span>          
 
           <div id="c5" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <% time_demand.each do |course| %>
                 <div class="govuk-checkboxes__item">
@@ -257,7 +257,7 @@
           </span>          
 
           <div id="c6" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <% classroom_sharing.each do |course| %>
                 <div class="govuk-checkboxes__item">
@@ -309,7 +309,7 @@
           </span>          
 
           <div id="c7" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <% training_availability.each do |course| %>
                 <div class="govuk-checkboxes__item">
