--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -43,7 +43,7 @@
           </button>
 
           <div id="c1" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
               
               <% levels.each do |level| %>
                 <div class="govuk-checkboxes__item">
@@ -88,7 +88,7 @@
           </button>
 
           <div id="c2" class="ccs-at-checkboxes-wrap">
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
 
               <% routes.each do |route| %>
                 <div class="govuk-checkboxes__item">
