--- a/app/views/ccs_patterns/home/small_checkboxes.html.erb
+++ b/app/views/ccs_patterns/home/small_checkboxes.html.erb
@@ -3,7 +3,7 @@
             <h1 class="govuk-heading-m">Small CCS checkboxes</h1>
             <p class="govuk-body">Uses GDS mark-up with additional ccs class.</p>
 
-            <p><b>Note</b> classes: .css-govuk-checkboxes--s</p>
+            <p><b>Note</b> classes: .ccs-govuk-checkboxes--s</p>
             
         </div>
     </div>
@@ -15,7 +15,7 @@
 
 
             <!-- small checkbox HTML starts -->
-            <div class="govuk-checkboxes css-govuk-checkboxes--s">
+            <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
               
                 <div class="govuk-checkboxes__item">
                     <input type="checkbox" name="box01" id="box01" value="box_01" class="govuk-checkboxes__input" checked="checked">
