--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -59,7 +59,7 @@
                   </h1>
                 </legend>
 
-                <div class="govuk-checkboxes css-govuk-checkboxes--s">
+                <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
                   <% browse_routes.each do |rating| %>
                   <div class="govuk-checkboxes__item">
                     <%= check_box_tag(
