--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -7,20 +7,31 @@
 <div id="fm-buildings-container">
   <div class="govuk-accordion" data-module="accordion" id="services-accordion">
     <div class="govuk-radios">
-      <% @building_data.each do |building| %>
-        <% x = x +1; obj = JSON.parse(building['building'].to_s) %>
+      <% @building_data.each do |record| %>
+        <% x = x +1; building = JSON.parse(record['building'].to_s) %>
         <div class="govuk-accordion__section ">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
               <!--<div class="govuk-radios__item govuk-!-margin-top-3">-->
               <!-- <input class="govuk-radios__input" id="<%= 'building' + x.to_s %>" name="<%= 'building_radio' %>" type="radio" value="<%= 'building' + x.to_s %>">-->
               <!-- <label class="govuk-label govuk-radios__label" for="<%= 'building' + x.to_s %>">-->
-              <span class="govuk-accordion__section-button" id="<%= obj['id'] + '_btn' %>"><%= 'Building ' + x.to_s + ' - ' + obj['name'] %></span>
+              <span class="govuk-accordion__section-button" id="<%= building['id'] + '_btn' %>"><%= 'Building ' + x.to_s + ' - ' + building['name'] %>
+                <br>
+                <span class="govuk-caption-m govuk-!-font-size-18">
+                  <% address = building['address']['fm-address-line-1'].to_s + ', ' +
+                      building['address']['fm-address-line-2'].to_s + ', ' +
+                      building['address']['fm-address-town'].to_s + ', ' +
+                      building['address']['fm-address-county'].to_s + ', ' +
+                      building['address']['fm-address-postcode'].to_s
+                  %>
+                  <%= address.sub(', , ',', ') %>
+                </span>
+              </span>
               <!--</label>-->
               <!--</div> -->
             </h2>
           </div>
-          <div class="govuk-accordion__section-content" aria-labelledby="<%= obj['name'] %>">
+          <div class="govuk-accordion__section-content" aria-labelledby="<%= building['name'] %>">
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
                 Type:
@@ -34,19 +45,7 @@
                 Region:
               </div>
               <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
-                <%= obj['region'] %>
-              </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-quarter govuk-!-font-size-16 govuk-!-font-weight-bold">
-                Address:
-              </div>
-              <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
-                <%= obj['address']['fm-address-line-1'] %>,
-                <%= obj['address']['fm-address-line-2'] %>,
-                <%= obj['address']['fm-address-town'] %>,
-                <%= obj['address']['fm-address-county'] %>,
-                <%= obj['address']['fm-address-postcode'] %>
+                <%= building['region'] %>
               </div>
             </div>
             <div class="govuk-grid-row">
@@ -54,7 +53,7 @@
                 Postcode in london:
               </div>
               <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
-                <%= obj['isLondon'] %>
+                <%= building['isLondon'] %>
               </div>
             </div>
 
