--- a/app/views/supply_teachers/journey/looking_for.html.erb
+++ b/app/views/supply_teachers/journey/looking_for.html.erb
@@ -29,6 +29,10 @@
               <%= label_tag :looking_for_calculate_temp_to_perm_fee, t('.answer_calculate_temp_to_perm_fee'), class: 'govuk-label govuk-radios__label' %>
             </div>
             <div class="govuk-radios__item">
+              <%= radio_button_tag :looking_for, :calculate_fta_to_perm_fee, checked?(params[:looking_for], 'calculate_fta_to_perm_fee'), class: 'govuk-radios__input' %>
+              <%= label_tag :looking_for_calculate_fta_to_perm_fee, t('.answer_calculate_fta_to_perm_fee'), class: 'govuk-label govuk-radios__label' %>
+            </div>
+            <div class="govuk-radios__item">
               <%= radio_button_tag :looking_for, :all_suppliers, checked?(params[:looking_for], 'calculate_temp_to_perm_fee'), class: 'govuk-radios__input' %>
               <%= label_tag :looking_for_all_suppliers, t('.all_suppliers'), class: 'govuk-label govuk-radios__label' %>
             </div>
