--- a/app/views/legal_services/home/index.html.erb
+++ b/app/views/legal_services/home/index.html.erb
@@ -5,22 +5,19 @@
       <h1 class="govuk-heading-xl"><%= t('.heading') %></h1>
 
       <p><%= t('.use_this_service.heading') %></p>
+      <p><%= t('.use_this_service.description') %></p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li><%= t('.use_this_service.item_1') %></li>
-        <li><%= t('.use_this_service.item_2') %></li>
-      </ul>
+      <p class="govuk-inset-text"><%= t('.use_this_service.item_html') %></p>
 
       <h2 class="govuk-heading-m"><%= t('.before_you_start.heading') %></h2>
 
       <p><%= t('.before_you_start.use_this_service.heading') %></p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><%= t('.before_you_start.use_this_service.item_1_html', authorised_customer_list_link: link_to(t('.authorised_customer_list_link_text'), '#')) %></li>
-        <li><%= t('.before_you_start.use_this_service.item_2_html', customer_guidance_document_link: link_to(t('.customer_guidance_document_link_text'), '#')) %></li>
-        <li><%= t('.before_you_start.use_this_service.item_3_html') %></li>
+        <li><%= t('.before_you_start.use_this_service.item_1_html', authorised_customer_list_link: link_to(t('.authorised_customer_list_link_text'), '/Authorised Customer List.docx')) %></li>
+        <li><%= t('.before_you_start.use_this_service.item_2_html', customer_guidance_document_link: link_to(t('.customer_guidance_document_link_text'), 'https://www.crowncommercial.gov.uk/agreements/RM3788')) %></li>
+        <li><%= t('.before_you_start.use_this_service.item_3') %></li>
         <li><%= t('.before_you_start.use_this_service.item_4') %></li>
-        <li><%= t('.before_you_start.use_this_service.item_5') %></li>
       </ul>
 
       <%= link_to 'Start now', '#', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
