styles for global page AT 116

--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -116,7 +116,7 @@
     <% end %>
   </section>
 
-  <section id="ccs-search-results" class="govuk-grid-column-two-thirds ccs-search-results">
+  <section class="govuk-grid-column-two-thirds ccs-search-results">
 
     <div class="govuk-form-group">
       <div class="ccs-search-results__sort">
