--- a/app/views/ccs_patterns/home/supplier_results_v1.html.erb
+++ b/app/views/ccs_patterns/home/supplier_results_v1.html.erb
@@ -1,7 +1,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-m">Supplier results table v1</h1>
-            <p class="govuk-body">New HTML for a supplier results table (v1) pattern. <br>(Unordered list, with no column headers).</p>
+            <h1 class="govuk-heading-m">Supplier results <b>list</b> v1</h1>
+            <p class="govuk-body">New HTML for a supplier results list (v1) pattern. <br>(Unordered list, in two cols but without column headers).</p>
 
             <p><b>Note</b> classes: .ccs-search-results, ccs-results-list, .ccs-results-list__detail,  .ccs-no-underline, .ccs-tag, .ccs-font--wrap, .ccs-next</p>
             <p><small>Change the class '.govuk-grid-column-two-thirds' accordingly.</small></p>
