--- a/app/views/apprenticeships/home/supplier_search2.html.erb
+++ b/app/views/apprenticeships/home/supplier_search2.html.erb
@@ -31,7 +31,7 @@
     <% end %> 
   </section>
 
-  <section id="ccs-search-results" class="govuk-grid-column-two-thirds ccs-search-results">
+  <section class="govuk-grid-column-two-thirds ccs-search-results">
   
     <table class="govuk-table">
       
