--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -9,7 +9,8 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/ccs-patterns/dynamic-accordian">Dynamic accordian</a></li>
-        <li><a href="/ccs-patterns/supplier-results-v1">Supplier results v1</a></li>
+        <li><a href="/ccs-patterns/supplier-results-v1">Supplier results (list) v1</a></li>
+        <li><a href="/ccs-patterns/supplier-results-v2">Supplier results (table) v2</a></li>
         <li><a href="/ccs-patterns/small-checkboxes">Small checkboxes</a></li>
       </ul>
 
