--- a/app/views/facilities_management/buildings/new_building.html.erb
+++ b/app/views/facilities_management/buildings/new_building.html.erb
@@ -12,7 +12,7 @@
       <%= render('building_address') %>
       <%= render('internal_area') %>
       <div class="govuk-!-margin-top-4">
-        <a id="fm-new-building-continue" href="#" class="govuk-button ccs-no-print" role="button">Continue</a>
+        <a id="fm-new-building-continue" href="building-type" class="govuk-button ccs-no-print" role="button">Continue</a>
       </div>
     </div>
   </div>
