--- a/app/views/facilities_management/buildings/manual_address_entry_form.html.erb
+++ b/app/views/facilities_management/buildings/manual_address_entry_form.html.erb
@@ -65,7 +65,7 @@
       </div>
 
       <div class="govuk-!-margin-top-6">
-        <a id="fm-new-building-continue" href="#" class="govuk-button ccs-no-print" role="button">Continue</a>
+        <a id="fm-new-address-continue" href="#" class="govuk-button ccs-no-print" role="button">Continue</a>
       </div>
     </div>
   </div>
