FM52 added validation error message

--- a/app/views/facilities_management/buildings/building_type.html.erb
+++ b/app/views/facilities_management/buildings/building_type.html.erb
@@ -15,6 +15,7 @@
       <h2 class="govuk-heading-m">What is the type of your building?</h2>
     </div>
   </div>
+  <%= render('errors/inline_error_summary') %>
 
   <!-- Radio's -->
   <div class="govuk-radios">
