--- a/app/views/errors/_inline_error_summary.html.erb
+++ b/app/views/errors/_inline_error_summary.html.erb
@@ -1,4 +1,4 @@
-<div id="inline-error-message" name="inline-error-message" hidden class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+<div id="inline-error-message" name="inline-error-message" class="govuk-error-summary govuk-visually-hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
   <h2 class="govuk-error-summary__title" id="error-summary-title">
     <%= @inline_error_summary_title %>
   </h2>
