FM52 review changes and bug fixes

--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -62,7 +62,7 @@
                 Internal area:
               </div>
               <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
-
+                <%= building['fm-gross-internal-area'] %>
               </div>
             </div>
 
