--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -72,7 +72,7 @@
                   </li>
                   <li>
                     <%= t('.do_next.sign_form_html',
-                          form_url: 'https://ccs-agreements.cabinetoffice.gov.uk/sites/default/files/contracts/RM3826%20Supply%20Teachers%20-%20Order%20Form%20Template%20%28Short%20Form%29.docx',
+                          form_url: 'https://assets.crowncommercial.gov.uk/wp-content/uploads/RM3826-Order-form-template-short-form-V1.docx',
                           framework_url: 'https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm3826') %>
                   </li>
                 </ul>
