--- a/app/assets/stylesheets/facilities_management/buildings.scss
+++ b/app/assets/stylesheets/facilities_management/buildings.scss
@@ -1,6 +1,11 @@
 
 .fm-postcode-lookup-panel {
   background-color: #e1e8e8;
-  border:1px black;
+  border: 1px black;
+  padding: 20px;
+}
+
+.fm-building-services-panel {
+  background-color: #e1e8e8;
   padding: 20px;
 }
