--- a/app/views/facilities_management/buildings/_services.html.erb
+++ b/app/views/facilities_management/buildings/_services.html.erb
@@ -1,6 +1,34 @@
-<div>
-  <h1 class="govuk-caption-xl">You have chosen <span class="govuk-!-font-weight-bold" id="fm-service-count">0</span>
-    <span class="govuk-!-font-weight-bold"> services </span>
-    so far</h1>
+<div class="govuk-body">
+  <div class="govuk-grid-row">
+    <h1 class="govuk-caption-xl">You have chosen <span class="govuk-!-font-weight-bold" id="fm-service-count">0</span>
+      <span class="govuk-!-font-weight-bold"> services </span>
+      so far</h1>
+  </div>
+  <div class="govuk-grid-row">
+    <h1 class="govuk-caption-m">From the list of facilities management services required across your estate entered
+      earlier, <br>now select all services, you need at this building</h1>
+  </div>
+  <div class="govuk-grid-row govuk-!-margin-top-6">
+    <div class="govuk-form-group">
+      <fieldset class="govuk-fieldset">
+        <div id="fm-buildings-selected-services" class="govuk-checkboxes fm-building-services-panel">
+          <p>or</p>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" checked id="fm-select-all-services" name="fm-select-all-services" type="checkbox" value="fm-all-services">
+            <label class="govuk-label govuk-checkboxes__label" for="fm_select_all-services">Select/Deselects all</label>
+          </div>
+        </div>
+      </fieldset>
+    </div>
+  </div>
+  <div class="govuk-grid-row govuk-!-margin-top-6">
+    <a id="fm-buldings-add-services-continue-link" href="/facilities-management/select-services" class="govuk-link--no-visited-state  ccs-no-print" role="button">+
+      Add
+      services</a>
+  </div>
+  <div class="govuk-grid-row govuk-!-margin-top-6">
+    <a id="fm-select-services-continue-btn" href="#" class="govuk-button ccs-no-print" role="button">Continue</a>
+  </div>
 </div>
+
 
