--- a/app/views/facilities_management/buildings/select_services_per_building.html.erb
+++ b/app/views/facilities_management/buildings/select_services_per_building.html.erb
@@ -1,14 +1,15 @@
 <div class="govuk-body">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-!-width-three-quarters">
       <a href="new-building" class="govuk-back-link">Back</a>
     </div>
   </div>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-!-width-three-quarters">
+    <div class="govuk-grid-row">
       <h2 class="govuk-caption-xl">Building - <span id="fm-building-name"></span></h2>
       <h1 class="govuk-heading-xl">Select services at this building</h1>
-      <%= render('facilities_management/buildings/services') %>
     </div>
+    <%= render('errors/inline_error_summary') %>
+    <%= render('facilities_management/buildings/services') %>
   </div>
 </div>
