--- a/app/views/ccs_patterns/home/dynamic_accordian.html.erb
+++ b/app/views/ccs_patterns/home/dynamic_accordian.html.erb
@@ -208,7 +208,7 @@
         <button type="submit" class="govuk-button">Continue</button>
 
         <div>
-          <h3 class="govuk-heading-m" data-txt01="services selected" data-txt02="None selected"><span></span> <span></span></h3>
+          <h3 class="govuk-heading-m" data-txt01="regions selected" data-txt02="None selected"><span></span> <span></span></h3>
           <a role="button" href="#" class="ccs-remove govuk-link--no-visited-state ccs-no-print" id="removeAll">Remove all</a>
 
           <ul class="govuk-list"></ul>
