--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -204,8 +204,18 @@ ul.ccs-checklist {
     #css-list-basket {
         display: none; //see .js-enabled
 
-        xxxxxxx.govuk-heading-m {
-            margin-bottom: govuk-spacing(1);
+        .govuk-heading-m {
+            margin-left: govuk-spacing(2);
+            margin-bottom: 0;
+        }
+
+        #removeAll {
+            margin: govuk-spacing(2) 0 govuk-spacing(3) govuk-spacing(2);
+            display: inline-block;
+
+            & .ccs-remove {
+                margin: 0;
+            }
         }
 
         & > button {
@@ -223,7 +233,7 @@ ul.ccs-checklist {
             li {
                 background-color: govuk-colour("white");
                 margin-bottom: 0;
-                padding: govuk-spacing(1) govuk-spacing(2);
+                padding: govuk-spacing(2) govuk-spacing(2);
                 border-top: 1px solid govuk-colour("grey-2");
 
                 &:first-child {
