New pattern and snags

--- a/app/views/apprenticeships/home/find_apprentices3.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices3.html.erb
@@ -7,9 +7,11 @@
      <form action="find_apprentices4" method="">
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="more-detail3">
-            <%= t('.outline_your_training_hint') %>
-          </label>
+          <h1 class="govuk-label-wrapper">
+            <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="more-detail3">
+              <%= t('.outline_your_training_hint') %>
+            </label>
+          </h1>
           <span id="more-detail-hint3" class="govuk-hint">
             <%= t('.outline_your_training') %>
           </span>
