--- a/app/views/ccs_patterns/home/small_checkboxes.html.erb
+++ b/app/views/ccs_patterns/home/small_checkboxes.html.erb
@@ -4,7 +4,7 @@
             <p class="govuk-body">Uses GDS mark-up with additional ccs class.</p>
 
             <p><b>Note</b> classes: .ccs-govuk-checkboxes--s</p>
-            
+
         </div>
     </div>
 
@@ -16,36 +16,36 @@
 
             <!-- small checkbox HTML starts -->
             <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
-              
+
                 <div class="govuk-checkboxes__item">
-                    <input type="checkbox" name="box01" id="box01" value="box_01" class="govuk-checkboxes__input" checked="checked">
+                    <input type="checkbox" name="box" id="box01" value="box_01" class="govuk-checkboxes__input" checked="checked">
                     <label class="govuk-label govuk-checkboxes__label" for="box01">
-                        Example pre-selected checkbox 
+                        Example pre-selected checkbox
                     </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                    <input type="checkbox" name="box02" id="box02" value="box_02" class="govuk-checkboxes__input" checked="checked">
+                    <input type="checkbox" name="box" id="box02" value="box_02" class="govuk-checkboxes__input" checked="checked">
                     <label class="govuk-label govuk-checkboxes__label" for="box02">
-                        Second example of pre-selected checkbox 
+                        Second example of pre-selected checkbox
                     </label>
-                </div>              
+                </div>
 
                 <div class="govuk-checkboxes__item">
-                    <input type="checkbox" name="box03" id="box03" value="box_03" class="govuk-checkboxes__input">
+                    <input type="checkbox" name="box" id="box03" value="box_03" class="govuk-checkboxes__input">
                     <label class="govuk-label govuk-checkboxes__label" for="box03">
                         A checkbox label
                     </label>
                 </div>
 
                 <div class="govuk-checkboxes__item">
-                    <input type="checkbox" name="box04" id="box04" value="box_04" class="govuk-checkboxes__input">
+                    <input type="checkbox" name="box" id="box04" value="box_04" class="govuk-checkboxes__input">
                     <label class="govuk-label govuk-checkboxes__label" for="box04">
                         Another checkbox label
                     </label>
                 </div>
 
             </div>
-            <!-- small checkbox HTML ends -->            
+            <!-- small checkbox HTML ends -->
 
 
         </div>
