--- a/app/views/ccs_patterns/home/supplier_results_v2.html.erb
+++ b/app/views/ccs_patterns/home/supplier_results_v2.html.erb
@@ -18,11 +18,11 @@
 
 
 
-      
+  <!-- ccs search results html starts here ... -->
   <section class="govuk-grid-column-two-thirds ccs-search-results">
-  
+
     <table class="govuk-table">
-      
+
       <caption class="govuk-table__caption ccs-remove">Results</caption>
 
       <thead class="govuk-table__head">
@@ -49,7 +49,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  ABC Training LTD National 
+                  ABC Training LTD National
               </a>
           </td>
           <td class="govuk-table__cell">
@@ -61,7 +61,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  DWK Group 
+                  DWK Group
               </a>
           </td>
           <td class="govuk-table__cell">
@@ -73,7 +73,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  A1 Training Solutions 
+                  A1 Training Solutions
               </a>
           </td>
           <td class="govuk-table__cell">
@@ -85,7 +85,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  North West Education LTD 
+                  North West Education LTD
               </a>
           </td>
           <td class="govuk-table__cell">
@@ -97,7 +97,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  OADS Training Group 
+                  OADS Training Group
               </a>
               <b>Ofsted:</b> 2 - Good
           </td>
@@ -110,7 +110,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  Pimlico College of Building 
+                  Pimlico College of Building
               </a>
               <b>Ofsted:</b> 2 - Good
           </td>
@@ -123,7 +123,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  United Colleges Groupi National 
+                  United Colleges Groupi National
               </a>
               <b>Ofsted:</b> 2 - Good
           </td>
@@ -136,7 +136,7 @@
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
               <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
-                  University of Liverpool 
+                  University of Liverpool
               </a>
               <b>Ofsted:</b> 2 - Good
           </td>
@@ -149,7 +149,7 @@
 
 
       </tbody>
-    </table>                         
+    </table>
 
     <%= link_to '#', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-next' do %>
     <%= t('common.next')%><span>&nbsp;&rarr;</span>
