--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -471,6 +471,29 @@ body.js-enabled #ccs-dynamic-accordian {
 }
 /* small checkboxes ends */
 
+/* titles checkboxes starts */
+.ccs-titles-checboxes {
+    margin-bottom: govuk-spacing(8);
+
+    .govuk-fieldset__heading {//color: lighten( govuk-colour("black"), 10% );
+        margin-bottom: govuk-spacing(5);
+        font-weight: normal;
+    }
+    .govuk-checkboxes__item {
+        .govuk-checkboxes__hint {
+            margin-bottom: govuk-spacing(1) !important;
+        }
+        .govuk-details {
+            margin-left: govuk-spacing(3);//margin not padding for border
+            margin-right: govuk-spacing(3);
+            border-bottom: 1px solid govuk-colour("grey-2");
+            margin-bottom: govuk-spacing(1);
+            padding-bottom: govuk-spacing(1);
+        }
+    }
+}
+/* titles checkboxes ends */
+
 /* ccs-print start ... */
 @media print {
     #results-filters {
