--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -12,9 +12,10 @@
         <li><a href="/ccs-patterns/supplier-results-v1">Supplier results (list) v1</a></li>
         <li><a href="/ccs-patterns/supplier-results-v2">Supplier results (table) v2</a></li>
         <li><a href="/ccs-patterns/small-checkboxes">Small checkboxes</a></li>
+        <li><a href="/ccs-patterns/titles-checkboxes">Titles with checkboxes</a></li>
       </ul>
 
-      
+
 
     </div>
   </div>
