--- a/app/views/facilities_management/standard_contract_questions/standard_contract_questions.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/standard_contract_questions.html.erb
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="govuk-grid-row govuk-!-margin-top-4">
-    <a id="fm-questions-continue" href="/facilities-management/buildings-list" class="govuk-button ccs-no-print" role="button">Continue</a>
+    <a id="fm-questions-continue" href="/facilities-management/calculator"" class="govuk-button ccs-no-print" role="button">Continue</a>
   </div>
 </div>
