--- a/app/views/supply_teachers/home/temp_to_perm_fee.html.erb
+++ b/app/views/supply_teachers/home/temp_to_perm_fee.html.erb
@@ -1,4 +1,5 @@
 <div class="govuk-body">
+  <%= byebug %>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <div class="govuk-panel govuk-panel--confirmation">
