--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -13,6 +13,7 @@
         <li><a href="/ccs-patterns/supplier-results-v2">Supplier results (table) v2</a></li>
         <li><a href="/ccs-patterns/small-checkboxes">Small checkboxes</a></li>
         <li><a href="/ccs-patterns/titles-checkboxes">Titles with checkboxes</a></li>
+        <li><a href="/ccs-patterns/numbered-pagination">Numbered pagination</a></li>
       </ul>
 
 
